brief temporal memory vizualization
cell colorization using sdr indeces.

--- a/examples/temporalMemory.html
+++ b/examples/temporalMemory.html
@@ -1,7 +1,7 @@
 <html>
 
   <head>
-    <title>nViz - SDR</title>
+    <title>nViz - Temporal Memory</title>
   </head>
 
   <body>
@@ -10,7 +10,7 @@
 
     <script src="../EventsHandler.js"></script>
     <script src="../nViz.js"></script>
-    <script src="sdr.js"></script>
+    <script src="temporalMemory.js"></script>
 
     <style>
        body{margin:none;padding:none;}
