--- a/examples/temporalMemory.html
+++ b/examples/temporalMemory.html
@@ -8,6 +8,7 @@
 
     <svg height="400" width="400" id='svg'></svg>
 
+    <script src="exampleData.js"></script>
     <script src="../EventsHandler.js"></script>
     <script src="../nViz.js"></script>
     <script src="temporalMemory.js"></script>
