--- a/examples/temporalMemory.html
+++ b/examples/temporalMemory.html
@@ -7,6 +7,7 @@
   <body>
 
     <svg height="400" width="400" id='svg'></svg>
+    <div>Use the left and right keys to move through the sequence</div>
 
     <script src="exampleData.js"></script>
     <script src="../EventsHandler.js"></script>
