restructure files and exampleData.js

--- a/examples/sdr.html
+++ b/examples/sdr.html
@@ -8,8 +8,7 @@
 
     <svg height="400" width="400" id='svg'></svg>
 
-    <script src="../EventsHandler.js"></script>
-    <script src="../nViz.js"></script>
+    <script src="../dist/nViz.js"></script>
     <script src="sdr.js"></script>
 
     <style>
