--- a/examples/temporalMemory.html
+++ b/examples/temporalMemory.html
@@ -10,8 +10,7 @@
     <div>Use the left and right keys to move through the sequence</div>
 
     <script src="exampleData.js"></script>
-    <script src="../EventsHandler.js"></script>
-    <script src="../nViz.js"></script>
+    <script src="../dist/nViz.js"></script>
     <script src="temporalMemory.js"></script>
 
     <style>
