--- a/examples/temporalMemory.html
+++ b/examples/temporalMemory.html
@@ -6,7 +6,8 @@
 
   <body>
 
-    <svg height="400" width="400" id='svg'></svg>
+    <!-- <svg height="400" width="400" id='svg'></svg> -->
+    <canvas id="canvas" height="400" width="400"></canvas>
     <div>Use the left and right keys to move through the sequence</div>
 
     <script src="exampleData.js"></script>
