cell click interactivity

--- a/examples/temporalMemory.html
+++ b/examples/temporalMemory.html
@@ -9,6 +9,7 @@
     <!-- <svg height="400" width="400" id='svg'></svg> -->
     <canvas id="canvas" height="400" width="400"></canvas>
     <div>Use the left and right keys to move through the sequence</div>
+    <div>Click on a cell to view its segments, then press any key to deselect</div>
 
     <script src="exampleData.js"></script>
     <script src="../dist/nViz.js"></script>
