more SDR examples

--- a/examples/sdr.html
+++ b/examples/sdr.html
@@ -6,7 +6,14 @@
 
   <body>
 
-    <svg height="400" width="400" id='svg'></svg>
+    <p>A single SDR with 1024 bits with active [2,50,125,200,570,800,920,1010,1020]</p>
+    <canvas id='canvas1' height="200" width="200"></canvas>
+    <p>A duel AND SDR with 1024 bits with active [[2,50,125,200,570,800,920,1010,1020],
+    [8,50,140,200,570,820,980,1000,1020]]</p>
+    <canvas id='canvas2' height="200" width="200"></canvas>
+    <p>A duel OR SDR with 1024 bits with active [[2,50,125,200,570,800,920,1010,1020],
+    [8,50,140,200,570,820,980,1000,1020]]</p>
+    <canvas id='canvas3' height="200" width="200"></canvas>
 
     <script src="../dist/nViz.js"></script>
     <script src="sdr.js"></script>
